# erlang_craq

./: .vimrc  Makefile  craq_erl.bake.sh  craq_erl.sh  craq_erl_cmd.sh  create.sh  ec_n1_repl.data.0000000001  read_data_file.erl  read_repl_data.erl  rebar.config  start.sh
binary_test/: craq_serialization_demo.beam  craq_serialization_demo.erl  craq_serialization_demo.txt  craq_serialization_test.beam  craq_serialization_test.erl  run.sh
config/: sys.config  vm.args
craq_mcp/: MCPPrompt_server.md  README.md  pyproject.toml
craq_mcp/.codebuddy/.rules/: my-rule.mdc
craq_mcp/src/craq_mcp/: __init__.py  craq_analysis_template.md  craq_erlang.md  main.py  server.py
craq_mcp/tests/: test_mcp_connection.py
craq_paper_mcp/: .gitignore  DEMO.md  README.md  pyproject.toml
craq_paper_mcp/.codebuddy/.rules/: my-rule.mdc
craq_paper_mcp/src/craq_mcp/: __init__.py  craq_analysis_template.md  main.py  paper_reading_template.md  server.py
craq_paper_mcp/tests/: test_mcp_connection.py
ebin/: erlang_craq.app
include/: erlang_craq.hrl
openfile/: file_open_demo.erl  file_open_demo_simple.erl  run.sh
src/: eh_app.erl  eh_data_server.erl  eh_sup.erl  eh_system_config.erl  eh_system_server.erl  eh_system_sup.erl  erlang_craq.app.src
trace_log/: start_app.txt  trace_query.txt  trace_setup_repl.txt  trace_setup_repl_cli.txt  trace_update.txt  trace_update_ec_n2.txt
trace_log.1/: start_app.txt  trace_setup_repl.txt  trace_update_cli.txt  trace_update_ec_n1.txt  trace_update_ec_n3.txt  trace_update_ec_n3_debug.txt  xx.txt
trace_log.2/: trace_update_ec_n3.txt
trace_log.2025/trace_log.add.node/: run.erl  run_app.erl  run_trace.add_node.erl  run_trace.setup.repl.erl  trace_ec_n2.txt  trace_log.add_node.node1.txt  trace_log.add_node.node2.txt  trace_log.add_node.node3.txt
trace_log.2025/trace_log.delete/: run_app.erl  run_trace.delete.erl  trace_log.delete.node1.txt  trace_log.delete.node2.txt  trace_log.delete.node3.txt
trace_log.2025/trace_log.query/: ReadMe.txt  run_app.erl  run_trace.query.erl  trace_log.query.node1.txt
trace_log.2025/trace_log.setup.repl/: run_app.erl  run_trace.setup.repl.erl  trace_log.setup.repl.node1.txt  trace_log.setup.repl.node2.txt  trace_log.setup.repl.node3.txt
trace_log.2025/trace_log.start.app/: run_app.erl  run_trace.start.app.erl  trace_log.start.app.node1.txt  trace_log.start.app.node2.txt  trace_log.start.app.node3.txt
trace_log.2025/trace_log.start.app.1/: run_trace.start.app.erl  trace_log.start.app.node1.txt  trace_log.start.app.node2.txt
trace_log.2025/trace_log.update/: ReadMe.txt  run_app.erl  run_trace.update.erl  trace_log.update.node1.txt  trace_log.update.node2.txt  trace_log.update.node3.txt
trace_log.3/: trace_update_ec_n1.txt
trace_log.add.node/: trace_ec_n3.txt
trace_log.pre/trace_log.1/: trace_setup_repl_1.txt  trace_update_cli.txt
trace_log.pre/trace_log.add.node/: trace_ec_n1.txt
trace_log.pre/trace_log.update.simple/: trace_update_ec_n1.txt
trace_log.query.1/: trace_query_ec_n1.txt
trace_log.update.3/: run.erl  trace_update_ec_n2.txt  trace_update_ec_n3.txt
trace_log.update.simple/: run.erl
trace_script/: trace_setup_repl.erl  trace_setup_repl_cli.erl  trace_start.erl
