[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "craq-mcp"
version = "0.1.0"
description = "A FastMCP 2.0 based MCP server for CRAQ protocol source code analysis"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "CRAQ", email = "craq@example.com"},
]
keywords = ["mcp", "craq", "erlang", "source-analysis", "distributed-systems", "fastmcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "nest-asyncio>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
craq-mcp = "craq_mcp.main:main"

[project.urls]
Homepage = "https://github.com/craq/craq-mcp"
Repository = "https://github.com/craq/craq-mcp"
Issues = "https://github.com/craq/craq-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/craq_mcp"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
target-version = "py313"
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[[tool.uv.index]]
name = "tencent-pypi"
url = "https://mirrors.tencent.com/repository/pypi/tencent_pypi/simple"
publish-url = "https://mirrors.tencent.com/repository/pypi/tencent_pypi/simple"